--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;400;500;700&display=swap");
+
+.leaflet-container {
+	width: 100%;
+	height: 50vh;
+}
