--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,3 +4,29 @@
 	width: 100%;
 	height: 50vh;
 }
+
+.leaflet-popup-content-wrapper {
+	padding: 0;
+	overflow: hidden;
+}
+
+.leaflet-popup-content-wrapper .leaflet-popup-content {
+	margin: 0;
+}
+
+.leaflet-popup-content-wrapper h4 {
+	padding: 16px;
+	background: #ff6804;
+	color: #fff;
+	font-size: 16px;
+}
+
+.leaflet-popup-content-wrapper p {
+	padding: 0 16px;
+	margin-bottom: 14px;
+	font-size: 14px;
+}
+
+.rounded-pill:hover {
+	cursor: pointer;
+}
